# krumnet

./: .env  .env.example  .gitignore  .travis.yml  Cargo.toml  Makefile  README.md  go.mod  go.sum  krumnet-config.example.json  main.go  rustfmt.toml
.cargo/: config
.github/: dependabot.yml
.github/workflows/: build-and-test.yml
ci/github-actions/: krumnet-config.json
db/: dump.sql  knexfile.js  package-lock.json  package.json  structure.sql
db/migrations/: 20200528095042_create_initial_schema.js  20200529162707_create_round_game_winner_tables.js  20200603123002_add_vote_counts_to_results.js
db/migrations/data/: 2020-05-21-add-prompts.sql
db/seeds/: add_initial_prompts.js
dev/db/: reset.sh
dev/docker/: redis.sh
server/: handler.go  options.go  server.go  server_test.go
server/auth/: redis_store.go  redis_store_test.go  session_handle.go  session_store.go  store.go  user_info.go
server/env/: google_config.go  krumpled_config.go  server_config.go
server/routes/: authentication.go  authentication_test.go
server/routing/: multiplex.go  multiplex_test.go  route_config.go  supported_verbs.go
src/: authority.rs  authorization.rs  configuration.rs  constants.rs  context.rs  errors.rs  google.rs  http.rs  jobs.rs  lib.rs  main.rs  oauth.rs  persistence.rs  records.rs  session.rs  version.rs
src/bg/: context.rs  mod.rs
src/bg/handlers/: mod.rs
src/bg/handlers/game_memberships/: mod.rs
src/bg/handlers/games/: mod.rs
src/bg/handlers/lobbies/: mod.rs
src/bg/handlers/lobby_memberships/: mod.rs
src/bg/handlers/rounds/: mod.rs  round_completion.rs  round_fulfillment.rs  utils.rs
src/data-store/: create-user.sql  find-user-by-google-id.sql  load-user-for-session.sql  user-for-session.sql
src/http/: mod.rs
src/interchange/: http.rs  jobs.rs  mod.rs  provisioning.rs  session_payload.rs
src/names/: mod.rs
src/names/data/: names.txt
src/records/: mod.rs  provisioning.rs  store.rs
src/routes/: auth.rs  games.rs  jobs.rs  lobbies.rs  lobby_memberships.rs  mod.rs
src/routes/data-store/: create-job-entry.sql  create-round-entry.sql  create-user.sql  find-user-by-google-id.sql  find_user.sql  game-for-entry-creation.sql  leave-lobby-for-user.sql  load-game-details.sql  load-lobby-detail.sql  load-lobby-games.sql  load-round-details.sql  load-round-entries.sql  load-rounds.sql  load-user-for-session.sql  lobbies-for-user.sql
src/routes/games/: mod.rs
src/routes/games/data-store/: available-entry-for-vote.sql  count-lobby-members.sql  create-round-entry-vote.sql  create-round-entry.sql  game-for-entry-creation.sql  load-game-details.sql  load-game-members.sql  load-placements.sql  load-round-entries.sql  load-rounds.sql
src/routes/lobbies/: mod.rs
src/routes/lobby_memberships/: mod.rs
src/routes/rounds/: mod.rs
tests/fixtures/requests/: cors.sh
(+24 files in other folders)
