[package]
name = "krumnet"
version = "0.1.0"
authors = ["Danny Hadley <dadleyy@gmail.com>"]
edition = "2018"
publish = false

[lib]
name = "krumnet"
path = "src/lib.rs"

[[bin]]
name = "krumnet"
path = "src/bin/main.rs"

[dependencies]
async-std = "^0.99"
http = "^0.1"
url = "^2.1"
chrono = "^0.4"
chrono-tz = "^0.5"
gumdrop = "^0.7"
serde_json = "^1.0"
isahc = "^0.7"
redis = "^0.13"
jsonwebtoken = "^6.0"
r2d2_postgres = "^0.14"
r2d2 = "^0.8"

[dependencies.uuid]
version = "^0.8"
features = ["v4"]

[dependencies.serde]
version = "^1.0"
features = ["derive"]

[dev-dependencies]
mockito = "^0.21"

[profile.release]
codegen-units = 1
